--- a/_publications/2021-05-08-oops.md
+++ b/_publications/2021-05-08-oops.md
@@ -1,7 +1,7 @@
 ---
 title: "“Oops...”: Mobile Message Deletion in Conversation Error and Regret Remediation"
 collection: publications
-permalink: /publication/2021-oops
+permalink: /publication/2021-05-08-oops
 date: 2021-05-08
 venue: 'CHI Conference on Human Factors in Computing Systems'
 paperurl: 'https://doi.org/10.1145/3411764.3445118'
