--- a/_publications/2019-05-01-signal.md
+++ b/_publications/2019-05-01-signal.md
@@ -4,9 +4,9 @@ collection: publications
 permalink: /publication/2019-05-01-signal
 excerpt: 'In our interview study (n=28) with HIV positive and negative men who have sex with men (MSM), we found some users preferred to keep their status private, especially when disclosure could stigmatise and disadvantage them, or risk revealing their status to someone they knew offline in a different context. '
 date: 2010-10-01
-venue: 'CHI 2019 Proceedings of the 2019 CHI Conference on Human Factors in Computing Systems'
+venue: 'Proceedings of the 2019 CHI Conference on Human Factors in Computing Systems '
 paperurl: 'https://discovery.ucl.ac.uk/id/eprint/10064771/1/CHI19_HIV_Disclosure_as_a_Signalling_System_preprint.pdf'
-citation: 'Your Name, You. (2010). &quot;Paper Title Number 2.&quot; <i>Journal 1</i>. 1(2).'
+citation: 'Warner, M., Maestre, J. F., Gibbs, J., Chung, C. F., & Blandford, A. (2019, May). Signal appropriation of explicit HIV status disclosure fields in sex-social apps used by gay and bisexual men. <i>In Proceedings of the 2019 CHI Conference on Human Factors in Computing Systems </i> (pp. 1-15).'
 ---
 In our interview study (n=28) with HIV positive and negative men who have sex with men (MSM), we found some users preferred to keep their status private, especially when disclosure could stigmatise and disadvantage them, or risk revealing their status to someone they knew offline in a different context. 
 
