--- a/_posts/2016-11-25-facebook.md
+++ b/_posts/2016-11-25-facebook.md
@@ -1,5 +1,7 @@
 ---
 layout: post
+collection: posts
+permalink: /posts/2023-spring/2016-11-25-facebook
 title: The Unintended Consequences of “People You May Know”
 ---
 
