--- a/_talks/2023-02-06-hiv.md
+++ b/_talks/2023-02-06-hiv.md
@@ -1,7 +1,7 @@
 ---
 title: "Investigating the effects of information control mechanisms around health disclosures in online social environments"
 collection: talks
-type: "Conference proceedings talk"
+type: "Guest Lecture"
 permalink: /talks/2023-02-06-hiv
 venue: "University College London"
 date: 2023-02-06
